--- a/vignettes/prepRECA-vignette.Rmd
+++ b/vignettes/prepRECA-vignette.Rmd
@@ -248,13 +248,9 @@ Before spending too much time interpreting the result, we should inspect for sig
 plotAgeTraces(recaResult$prediction, plusGroup = 12)
 ```
 
-Beware of plots showing spikes or autocorrelations. Those are signs of non-converged parameterization. In those cases consider re-running with higher value for the parameter 'burnin'. Low-abundance groups, typically take longer to converge, as evident from age 1, in the plot above. Non-convergence of these estimates are also of less concern, as long as one can justify from other sources that they really are of low abundance. For age-group 1, low abundance in catches is expected from gear selectivity.
+Beware of plots showing spikes or autocorrelations. Those are signs of non-converged parameterization. In those cases consider re-running with higher value for the parameter 'burnin'. Low-abundance groups, typically take longer to converge, as evident from age 1, in the plot above. Non-convergence of these estimates are also of less concern, as long as one can justify from other sources that they really are of low abundance. For age-group 1, low abundance in catches is expected from gear selectivity. 
 
-```{r}
-makeResultTableRECA(recaResult$prediction, plusGroup = 12)
-```
-
-...
+Finally, I extract means and credible intervals, and plot them using 'plotCatchAtAge':
 
 ```{r}
 plotCatchAtAge(recaResult$prediction, plusGroup = 12, title="Catch At Age, Haddock example, 95% CI")
